update kickstart to config cloudinit

--- a/PackerWorkShop/CentOS/http/ks-centos-stream-9.cfg
+++ b/PackerWorkShop/CentOS/http/ks-centos-stream-9.cfg
@@ -82,7 +82,12 @@ hyperv-daemons
 %end
 
 # https://pykickstart.readthedocs.io/en/latest/kickstart-docs.html#chapter-6-post-installation-script
+# https://unix.stackexchange.com/questions/103926/kickstart-copy-file-to-new-system
 %post
+mount /dev/cdrom /mnt
+cp /mnt/90_override_renderer.cfg /etc/cloud/cloud.cfg.d/90_override_renderer.cfg
+umount /mnt
+
 dnf update
 dnf upgrade -y
 %end
