--- a/KubeWorkShop/Traefik/conf/dynamic/traefik-dashboard-cloud.yaml
+++ b/KubeWorkShop/Traefik/conf/dynamic/traefik-dashboard-cloud.yaml
@@ -7,8 +7,17 @@ http:
       # https://www.teanote.pub/archives/247
       # https://doc.traefik.io/traefik/routing/routers/#tls
       # will terminate the TLS request
-      # tls:
-      #   certResolver: freeipa
+      entryPoints:
+        - websecure
+      middlewares:
+        - userpass
+      tls:
+        certResolver: acmeResolver
+  middlewares:
+    userpass:
+      basicAuth:
+        users:
+          - admin:$apr1$/F5ai.wT$7nFJWh4F7ZA0qoY.JZ69l1
 # tls:
 #   stores:
 #     default:
