--- a/KubeWorkShop/FreeIPA/aio-freeipa.yaml
+++ b/KubeWorkShop/FreeIPA/aio-freeipa.yaml
@@ -32,6 +32,8 @@ data:
     --forwarder={{ FreeIPA_dns_forwarder }}
     --auto-reverse
 
+    --ip-address={{ FreeIPA_container_hostIP }}
+
     --debug
     --skip-mem-check
   # https://www.freeipa.org/page/Howto/DNS_updates_and_zone_transfers_with_TSIG
@@ -40,7 +42,7 @@ data:
   ipa-ext.conf: |
     key "keySololab" {
             algorithm {{ FreeIPA_tsig_algorithm }};
-            secret {{ FreeIPA_tsig_secret }};
+            secret "{{ FreeIPA_tsig_secret }}";
     };
 ---
 apiVersion: v1
@@ -53,6 +55,21 @@ spec:
   # https://docs.podman.io/en/latest/markdown/podman-kube-play.1.html
   # https://www.freeipa.org/page/Docker#FreeIPA_server_containers
   hostname: "{{ FreeIPA_container_hostname }}"
+  # https://stackoverflow.com/questions/43544370/kubernetes-how-to-set-volumemount-user-group-and-file-permissions
+  initContainers:
+    - name: take-data-dir-ownership
+      image: docker.io/library/alpine:3.18
+      imagePullPolicy: IfNotPresent
+      # Give `dirsrv` user (id 389) permissions a mounted volume
+      # https://github.com/grafana/grafana-docker/blob/master/Dockerfile
+      command:
+        - chown
+        - -R
+        - 389:389
+        - /dev/shm
+      volumeMounts:
+        - name: dshm
+          mountPath: /dev/shm
   containers:
     - name: freeipa
       image: "{{ FreeIPA_container_image }}"
@@ -82,6 +99,10 @@ spec:
           containerPort: 443
           hostIP: "{{ FreeIPA_container_hostIP }}"
           hostPort: 443
+        - name: http-pki
+          containerPort: 8080
+          hostIP: "{{ FreeIPA_container_hostIP }}"
+          hostPort: 8080
         - name: https-pki
           containerPort: 8443
           hostIP: "{{ FreeIPA_container_hostIP }}"
@@ -107,8 +128,8 @@ spec:
           protocol: UDP
       env:
         # https://github.com/freeipa/freeipa-container#running-freeipa-server-container:~:text=Alternatively%2C%20the-,IPA_SERVER_IP,-environment%20variable%20via
-        - name: IPA_SERVER_IP
-          value: "{{ FreeIPA_container_hostIP }}"
+        # - name: IPA_SERVER_IP
+        #   value: "{{ FreeIPA_container_hostIP }}"
         - name: IPA_SERVER_HOSTNAME
           value: "{{ FreeIPA_container_hostname }}"
       # https://github.com/freeipa/freeipa-container/issues/516#issuecomment-1431096973
@@ -128,9 +149,11 @@ spec:
         - name: ipa-ext.conf
           mountPath: /etc/named/ipa-ext.conf
           subPath: ipa-ext.conf
+        # https://github.com/freeipa/freeipa-container/issues/449
+        # ->
         # https://github.com/freeipa/freeipa-container/commit/024676573b6a59b4b361e35808f55739bd793e63
-        # - name: dshm
-        #   mountPath: /dev/shm
+        - name: dshm
+          mountPath: /dev/shm
         # - name: cgroups
         #   mountPath: /sys/fs/cgroup
         #   readOnly: true
@@ -153,14 +176,17 @@ spec:
           - key: ipa-ext.conf
             path: ipa-ext.conf
     # https://github.com/freeipa/freeipa-container/commit/024676573b6a59b4b361e35808f55739bd793e63
-    # - name: dshm
-    #   emptyDir:
-    #     medium: Memory
-    #     sizeLimit: 128Mi
+    - name: dshm
+      emptyDir:
+        medium: Memory
     # - name: cgroups
     #   hostPath:
     #     path: /sys/fs/cgroup
   dnsConfig:
     nameservers:
       - 127.0.0.1
+  hostAliases:
+    - ip: "{{ FreeIPA_container_hostIP }}"
+      hostnames:
+        - "{{ FreeIPA_container_hostname }}"
   restartPolicy: Never
