update traefik kube file

--- a/KubeWorkShop/Traefik/aio-traefik-cloud.yaml
+++ b/KubeWorkShop/Traefik/aio-traefik-cloud.yaml
@@ -75,7 +75,7 @@ data:
             # used during the challenge
             entryPoint: web
   # root_ca.crt: |
-  #   {#{{ Root_CA_Cert | indent(width=4) }}#}
+  #   {{ Root_CA_Cert | indent(width=4) | default('')}}
 
 ---
 apiVersion: v1
