add vars in playbook

--- a/AnsibleWorkShop/runner/project/Invoke-PodmanRootlessProvision.yml
+++ b/AnsibleWorkShop/runner/project/Invoke-PodmanRootlessProvision.yml
@@ -1,6 +1,6 @@
 # code: language=ansible
 ---
-- hosts: kube-2 # kube-2
+- hosts: "{{ target_host }}" # kube-2
   gather_facts: yes
   tasks:
      # https://docs.ansible.com/ansible/latest/user_guide/playbooks_reuse_roles.html#including-roles-dynamic-reuse
@@ -28,16 +28,32 @@
         vars_sub_ids:
           state: present
           present_override: false
+        vars_kernel_modules:
+          state: present
+          list:
+            - ip_tables
         vars_app_config:
           podman:
             containers_conf:
               state: present
               content: |
                 [containers]
-                # log_driver="k8s-file"
+                # log_driver="journald"
                 # log_size_max="10m"
                 shm_size="128m"
                 tz = "Asia/Shanghai"
+        vars_service:
+          podman_socket:
+            user_scope: 
+              skipped: false
+              enabled: true
+              state: started
+            system_scope: 
+              skipped: true
+              enabled: false
+              state: stopped
+          systemd_lingering:
+            state: enable
     # - name: whoami
     #   shell:
     #     cmd: id -u
