--- a/KubeWorkShop/Gitea/aio-gitea-bitnami.yaml
+++ b/KubeWorkShop/Gitea/aio-gitea-bitnami.yaml
@@ -1,6 +1,18 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
+  name: postgresql_data
+spec:
+  resources:
+    requests:
+      storage: 50Gi
+  volumeMode: Filesystem
+  accessModes:
+    - ReadWriteOnce
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
   name: gitea_data
 spec:
   resources:
@@ -18,6 +30,22 @@ metadata:
     name: gitea
 spec:
   containers:
+    - name:  postgresql
+      image:  docker.io/bitnami/postgresql:15
+      resources:
+        limits:
+          memory: "1024Mi"
+          cpu: "1000m"
+      env:
+        - name: POSTGRESQL_DATABASE
+          value: bitnami_gitea
+        - name: POSTGRESQL_USERNAME
+          value: bn_gitea
+        - name: POSTGRESQL_PASSWORD
+          value: bitnami1
+      volumeMounts:
+        - name: postgresql_data
+          mountPath: /bitnami/postgresql
     - name: gitea
       image: docker.io/bitnami/gitea:1
       resources:
@@ -26,4 +54,26 @@ spec:
           cpu: "1000m"
       ports:
         - name: http
-          containerPort: <Port>
+          containerPort: 3000
+        - name: ssh
+          containerPort: 2222
+      env:
+        - name: GITEA_DATABASE_HOST
+          value: postgresql
+        - name: GITEA_DATABASE_NAME
+          value: bitnami_gitea
+        - name: GITEA_DATABASE_USERNAME
+          value: bn_gitea
+        - name: GITEA_DATABASE_PASSWORD
+          value: bitnami1
+      volumeMounts:
+        - name: gitea_data
+          mountPath: /bitnami/gitea
+  volumes:
+    - name: postgresql_data
+      persistentVolumeClaim:
+        claimName: postgresql_data
+    - name: gitea_data
+      persistentVolumeClaim:
+        claimName: gitea_data
+  restartPolicy: Never
