--- a/KubeWorkShop/GitLab/aio-gitlab.yaml
+++ b/KubeWorkShop/GitLab/aio-gitlab.yaml
@@ -44,9 +44,6 @@ spec:
   containers:
     - name: gitlab
       image: "{{ GitLab_container_image }}"
-      # https://www.redhat.com/sysadmin/podman-inside-container
-      securityContext:
-        runAsUser: 1001
       resources:
         requests:
           memory: "2560Mi"
@@ -54,21 +51,29 @@ spec:
         limits:
           memory: "3072Mi"
           cpu: "2000m"
-      ports:
-        - name: http
-          containerPort: 80
-          hostPort: 80
-        - name: https
-          containerPort: 443
-          hostPort: 443
-        - name: ssh
-          containerPort: 22
-          hostPort: 2222
+      # ports:
+      #   - name: http
+      #     containerPort: 80
+      #     hostPort: 80
+      #   - name: https
+      #     containerPort: 443
+      #     hostPort: 443
+      #   - name: ssh
+      #     containerPort: 22
+      #     hostPort: 2222
       env:
         - name: GITLAB_OMNIBUS_CONFIG
           value: |
             external_url '{{ GitLab_external_url }}'
-            gitlab_rails['gitlab_shell_ssh_port'] = 2222
+            nginx['listen_https'] = false
+            nginx['listen_port'] = 80
+            gitlab_rails['gitlab_shell_ssh_port'] = 22
+      livenessProbe:
+        initialDelaySeconds: 180
+        periodSeconds: 60
+        httpGet:
+          path: /
+          port: 80
       volumeMounts:
         - name: config
           mountPath: /etc/gitlab
