--- a/AnsibleWorkShop/runner/project/Deploy-FreeIPAInPodman.yml
+++ b/AnsibleWorkShop/runner/project/Deploy-FreeIPAInPodman.yml
@@ -1,28 +1,27 @@
 # code: language=ansible
 ---
-- hosts: "{{ target_host }}" # kube-2
+- hosts: "{{ target_host.name }}" # kube-2
   gather_facts: yes
   vars: 
     podman_rootless_play:
-      vars_podman_host: "{{ target_host }}"
+      vars_podman_host: "{{ target_host.name }}"
       vars_podman_uri:
         scheme_authority: http://d # http://d/ ← (default), https://docs.podman.io/en/latest/markdown/podman-system-service.1.html
         api_version: v4.4.1 # v4.0.0 ← (default)
-        unix_socket: /run/user/{{ uid }}/podman/podman.sock # socket file path for podman, e.g. /run/user/1000/podman/podman.sock
+        unix_socket: /run/user/{{ target_host.uid }}/podman/podman.sock # socket file path for podman, e.g. /run/user/1000/podman/podman.sock
       vars_podman_play:
-        state: "{{ FreeIPA_pod_state }}"
+        state: "{{ FreeIPA.pod.state }}"
         timeout: 600
         kube_file: 
-          host: localhost
-          # path: /KubeWorkShop/FreeIPA/aio-freeipa.yaml
-          content: "{{ lookup('ansible.builtin.template', FreeIPA_kube_file) }}"
+          host: "{{ FreeIPA.pod.kube_file_host }}"
+          content: "{{ lookup('ansible.builtin.template', FreeIPA.pod.kube_file_tmpl) }}"
         absent:
           query_params:
-            force: "{{ FreeIPA_pod_absent_force | bool }}"
+            force: "{{ FreeIPA.pod.absent_force | bool }}"
       vars_podman_generate_systemd:
         generate:
           path_params: 
-            name: freeipa
+            name: "{{ FreeIPA.pod.systemd_service }}"
           query_params:
             useName: true
       vars_service:
@@ -31,8 +30,6 @@
             skipped: false
             enabled: true
             state: started
-    healthcheck_container_name: freeipa-freeipa
-    connection_id: "cloud-init eth0"
   tasks:
      # https://docs.ansible.com/ansible/latest/user_guide/playbooks_reuse_roles.html#including-roles-dynamic-reuse
     - name: Invoke podman-rootless-play
@@ -47,7 +44,7 @@
 
     - name: Test freeipa status 
       ansible.builtin.uri:
-        url: http://d/{{ podman_rootless_play.vars_podman_uri.api_version }}/libpod/containers/{{ healthcheck_container_name }}/healthcheck
+        url: http://d/{{ podman_rootless_play.vars_podman_uri.api_version }}/libpod/containers/{{ FreeIPA.pod.container_name }}/healthcheck
         unix_socket: "{{ podman_rootless_play.vars_podman_uri.unix_socket }}"
         method: GET
         status_code: 200
@@ -63,20 +60,20 @@
       block:
         - name: add freeipa dns server to interface
           community.general.nmcli:
-            conn_name: "{{ connection_id }}"
+            conn_name: "{{ target_host.connection_id }}"
             type: ethernet
             dns4:
-              - "{{ FreeIPA_container_hostIP }}"
+              - "{{ FreeIPA.pod.hostIP }}"
             state: present
           when:
             - podman_rootless_play.vars_podman_play.state == 'present'
 
-        - name: only keep default dns server to interface
+        - name: only keep default dns server to interface when uninstall freeipa
           community.general.nmcli:
-            conn_name: "{{ connection_id }}"
+            conn_name: "{{ target_host.connection_id }}"
             type: ethernet
             dns4:
-              - "{{ FreeIPA_dns_forwarder }}"
+              - "{{ FreeIPA.app.dns_forwarder }}"
             state: present
           when:
             - podman_rootless_play.vars_podman_play.state == 'absent'
@@ -84,4 +81,4 @@
         # https://stackoverflow.com/questions/75258022/how-to-bring-up-an-interface-using-ansible-nmcli-module
         - name: bring up interface
           ansible.builtin.shell: 
-            cmd: nmcli con up "{{ connection_id }}"
+            cmd: nmcli con up "{{ target_host.connection_id }}"
