--- a/AnsibleWorkShop/runner/project/Update-FreeIPAConfig.yml
+++ b/AnsibleWorkShop/runner/project/Update-FreeIPAConfig.yml
@@ -3,21 +3,25 @@
 - hosts: localhost
   gather_facts: false
   vars: 
+    podman_rootless_play:
+      vars_podman_uri:
+        scheme_authority: http://d # http://d/ ← (default), https://docs.podman.io/en/latest/_static/api.html?version=v4.5 or create one https://docs.podman.io/en/latest/markdown/podman-system-service.1.html
+        api_version: v4.4.1 # v4.0.0 ← (default)
+        unix_socket: /run/user/{{ target_host.uid }}/podman/podman.sock # socket file path for podman, e.g. /run/user/1000/podman/podman.sock
     ipa:
-      hostname: ipa.infra.sololab
       admin: admin
-      admin_password: P@ssw0rd
+      admin_password: "{{ FreeIPA.app.admin_password }}"
     dns:
       zones:
         - name: infra.sololab.
-          dns_update_policy: grant keySololab wildcard * ANY;
+          dns_update_policy: grant {{ FreeIPA.app.tsig_key_name }} wildcard * ANY;
         - name: 255.168.192.in-addr.arpa.
-          dns_update_policy: grant keySololab wildcard * ANY;
-      records:
-        - zone_name: infra.sololab
-          record_name: ipa-ca
-          record_type: 'A'
-          record_value: '192.168.255.11'
+          dns_update_policy: grant {{ FreeIPA.app.tsig_key_name }} wildcard * ANY;
+      # records:
+      #   - zone_name: infra.sololab
+      #     record_name: ipa-ca
+      #     record_type: 'A'
+      #     record_value: '192.168.255.11'
   tasks:
     - name: Set IPA DNS zone
       ansible.builtin.include_tasks:
@@ -29,12 +33,13 @@
       loop: "{{ dns.zones }}"
 
     - name: Enable FreeIPA ACME
-      delegate_to: kube-2
+      delegate_to: "{{ target_host.name }}"
       block:
         - name: new podman exec session for freeipa
           ansible.builtin.uri:
-            url: http://d/{{ api_version }}/libpod/containers/{{ container_name }}/exec
-            unix_socket: /run/user/1001/podman/podman.sock
+            # url: http://d/{{ podman_rootless_play.vars_podman_uri.api_version }}/libpod/containers/{{ FreeIPA_container_name }}/exec
+            url: "{{ podman_rootless_play.vars_podman_uri.scheme_authority }}/{{ podman_rootless_play.vars_podman_uri.api_version }}/libpod/containers/{{ FreeIPA.pod.container_name }}/exec"
+            unix_socket: "{{ podman_rootless_play.vars_podman_uri.unix_socket }}"
             method: POST
             status_code: 201
             body_format: json
@@ -50,7 +55,8 @@
                 - bash
                 - -c
                 # https://www.freeipa.org/page/V4/ACME#Feature_management
-                - "echo 'P@ssw0rd' | kinit admin; ipa-acme-manage enable"
+                # - "echo 'P@ssw0rd' | kinit admin; ipa-acme-manage enable"
+                - "ipa-acme-manage enable"
               Tty: true
               Privileged: false
               User: root
@@ -77,30 +83,31 @@
             # var: exec_start_respond.content.stdout_lines
             msg: "{{ exec_start_respond.content.split('\r\n') }}"
 
-        - name: update ipa-ca record
-          community.general.ipa_dnsrecord:
-            ipa_host: "{{ ipa.hostname }}"
-            ipa_pass: "{{ ipa.admin_password }}"
-            validate_certs: false
-            zone_name: "{{ item.zone_name }}"
-            record_name: "{{ item.record_name }}"
-            record_type: "{{ item.record_type }}"
-            record_value: "{{ item.record_value }}"
-            state: present
-          loop: "{{ dns.records }}"
+        # - name: update ipa-ca record
+        #   community.general.ipa_dnsrecord:
+        #     ipa_host: "{{ FreeIPA.pod.hostname }}"
+        #     ipa_pass: "{{ ipa.admin_password }}"
+        #     validate_certs: false
+        #     zone_name: "{{ item.zone_name }}"
+        #     record_name: "{{ item.record_name }}"
+        #     record_type: "{{ item.record_type }}"
+        #     record_value: "{{ item.record_value }}"
+        #     state: present
+        #   loop: "{{ dns.records }}"
 
-    - name: create ldap object
+    # https://freeipa.org/page/HowTo/LDAP
+    - name: create ldap sysaccount object
       community.general.ldap_entry:
-        server_uri: ldap://{{ ipa.hostname }}:389
-        bind_dn: uid=admin,cn=users,cn=accounts,dc=infra,dc=sololab
-        bind_pw: P@ssw0rd
-        dn: uid=system,cn=sysaccounts,cn=etc,dc=infra,dc=sololab
+        server_uri: ldap://{{ FreeIPA.pod.hostname }}:389
+        bind_dn: "{{ FreeIPA.app.admin_dn }}"
+        bind_pw: "{{ FreeIPA.app.admin_password }}"
+        dn: "{{ FreeIPA.app.sysaccount_dn }}"
         objectClass:
           - account
           - simpleSecurityObject
         attributes:
-          uid: system
-          userPassword: P@ssw0rd
+          uid: "{{ FreeIPA.app.sysaccount_uid }}"
+          userPassword: "{{ FreeIPA.app.sysaccount_password }}"
           passwordExpirationTime: 20380119031407Z
           nsIdleTimeout: 0
         state: present
@@ -111,18 +118,10 @@
           # https://forum.vyos.io/t/how-to-configure-dhcp-server-to-update-dns-zone/6231/6
           # https://kb.isc.org/docs/isc-dhcp-41-manual-pages-dhcpdconf#:~:text=ddns%2Ddomainname%20name%3B
           - set service dhcp-server dynamic-dns-update
-          - set service dhcp-server shared-network-name LAN shared-network-parameters "key {{ key_name }} { algorithm {{ algorithm }}; secret {{ secret }}; };"
-          - set service dhcp-server shared-network-name LAN shared-network-parameters "ddns-domainname &quot;{{ domainname }}&quot;;"
-          - set service dhcp-server shared-network-name LAN shared-network-parameters "ddns-rev-domainname &quot;{{ rev_domainname }}&quot;;"
-          - set service dhcp-server shared-network-name LAN shared-network-parameters "zone {{ zonename }} { primary {{ name_server }}; key {{ key_name }}; }"
-          - set service dhcp-server shared-network-name LAN shared-network-parameters "zone {{ rev_zonename }} { primary {{ name_server }}; key {{ key_name }}; }"
-      vars:
-        key_name: keySololab
-        algorithm: hmac-sha256
-        secret: j/2DR2zkVAyDHL2XjE731sMt9s6cmRhXE6niScAgHA0=
-        domainname: infra.sololab.
-        rev_domainname: in-addr.arpa.
-        zonename: "{{ domainname }}"
-        rev_zonename: "255.168.192.{{ rev_domainname }}"
-        name_server: 192.168.255.11
+          - set service dhcp-server shared-network-name LAN shared-network-parameters "key {{ FreeIPA.app.tsig_key_name }} { algorithm {{ FreeIPA.app.tsig_algorithm }}; secret {{ FreeIPA.app.tsig_secret }}; };"
+          - set service dhcp-server shared-network-name LAN shared-network-parameters "ddns-domainname &quot;{{ FreeIPA.app.dns_zonename }}&quot;;"
+          - set service dhcp-server shared-network-name LAN shared-network-parameters "ddns-rev-domainname &quot;in-addr.arpa.&quot;;"
+          - set service dhcp-server shared-network-name LAN shared-network-parameters "zone {{ FreeIPA.app.dns_zonename }} { primary {{ FreeIPA.pod.hostIP }}; key {{ FreeIPA.app.tsig_key_name }}; }"
+          - set service dhcp-server shared-network-name LAN shared-network-parameters "zone {{ FreeIPA.app.dns_rev_zonename }} { primary {{ FreeIPA.pod.hostIP }}; key {{ FreeIPA.app.tsig_key_name }}; }"
+        save: True
       delegate_to: vyos
