use tlschallenge instead

--- a/AnsibleWorkShop/runner/project/Deploy-TraefikInPodman.yml
+++ b/AnsibleWorkShop/runner/project/Deploy-TraefikInPodman.yml
@@ -119,3 +119,4 @@
           loop: "{{ Traefik.ingress.tmpl }}"
           when: 
             - podman_rootless_play.vars_podman_play.state == 'absent'
+            - Traefik.ingress.tmpl is defined
